syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";

// exposing gRPC service definition
// and some APIs
service DiscountProtoService {

  rpc GetDiscount (GetDiscountRequest) returns (CouponModel);

  rpc CreateDiscount (CreateDiscountRequest) returns (CouponModel);

  rpc UpdateDiscount (UpdateDiscountRequest) returns (CouponModel);

  rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

// Define complex types
// = 1 means we are giving them orders
message GetDiscountRequest {
  string productName = 1;
}

message CouponModel {
  int32 id = 1;
  string productName = 2;
  string description = 3;
  int32 amount = 4;
}

message CreateDiscountRequest {
  CouponModel coupon = 1;
}

message  UpdateDiscountRequest {
  CouponModel coupon = 1;
}

message DeleteDiscountRequest {
  string productName = 1;
}

message DeleteDiscountResponse {
  bool success = 1;
}